fix scrollbars

--- a/src/app/analysis/analysis.component.css
+++ b/src/app/analysis/analysis.component.css
@@ -1,3 +1,3 @@
 .app-analysis {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
