--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 .app-notes {
   max-height: 150px;
   display: inline-block;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
